Upgrade to Spring Boot 2.1.1.RELEASE * and retread tests to use testcontainers cassandra:3.11.2 image * and remove vestiges of embedded Cassandra utility classes and Cassandra Unit * and update cql script to include keyspace creation * and add Jacoco plugin configuration